2004-12-26  Atsushi Enomoto  <atsushi@ximian.com>

	* XPathNavigator.cs : Added CheckValidity() and ValueType.
	  For SetTypedValue(), throw NotSupportedException instead of
	  NotImplementedException.

2004-12-16  Atsushi Enomoto  <atsushi@ximian.com>

	* XPathNavigator.cs :added MoveToFollowing(), ReplaceSelf() and
	  all the missing attributes.

2004-12-04  Atsushi Enomoto  <atsushi@ximian.com>

	* XPathDocument.cs : switch to DTMXPathNavigator2 which fully
	  eliminated string fields from struct.
	  (When we switch from struct to class, revert this change to use
	  DTMXPathNavigator, since class-based DTMXPathNavigator2 is rather
	  wasting processing speed.)

2004-12-02  Atsushi Enomoto  <atsushi@ximian.com>

	* Iterator.cs : when PredicateIterator has a numeric predicate, it
	  will never be true twice. So just break up the iteration on true.
	* XPathNavigator.cs : implemented LookupPrefix().
	* Expression.cs : ExprParens.Optimize() could just return the content
	  expression.

2004-12-01  Atsushi Enomoto  <atsushi@ximian.com>

	* IXPathChangeNavigable.cs,
	  XmlChangeFilters.cs,
	  XPathDocumentNodeChangedAction.cs : removed old files.

2004-12-01  Atsushi Enomoto  <atsushi@ximian.com>

	* Iterator.cs : with related to the previous patch, many comments
	  got making no sense. Thanks to Harinath.

2004-12-01  Atsushi Enomoto  <atsushi@ximian.com>

	* Iterator.cs : actually I mean this patch.

2004-12-01  Atsushi Enomoto  <atsushi@ximian.com>

	* Iterator.cs : Create _current clone only when required. So just set
	  null when MoveNextCore() succeeded (except for some cases that
	  _current is _nav, such as SelfIterator).

2004-11-30  Atsushi Enomoto  <atsushi@ximian.com>

	* Iterator.cs : SlashIterator.RequireSorting is always false. Whether
	  it has to collect nodes in prior or not and whether it might return
	  nodes in inconsistent order is different matter.
	  (It still needs to store nodes when either of branches requires