@@ -1,3 +1,7 @@
+2004-02-08  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* Expression.cs : tiny code format fix by Andrew Skiba.
+
 2004-12-26  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* XPathNavigator.cs : Added CheckValidity() and ValueType.
